# MCP_File_server

mcpserver/: README.md  chat_app.py  env_template.txt  llm_handler.py  mcp_client_simple.py  pyproject.toml  run_chat_app.py
mcpserver/server/: fs.json  fs_server.py
